fix (web): gap between dropdown and button in navbar lead to dropdown closing before reaching it

--- a/eonvelope.scss
+++ b/eonvelope.scss
@@ -6,5 +6,6 @@
 
 $primary: #3e7bb6;
 $min-contrast-ratio: 4.4; //deviate slightly from recommended 4.5 to make text on the primary-bg appear white
+$dropdown-spacer: 0;
 
 @import "node_modules/bootstrap/scss/bootstrap";
